Conclusao do render de elementos e do calendario

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,22 @@
   <title>Cronos</title>
 </head>
 <body>
+
+  <section class="calendar">
+    <header>Teste</header>
+    <div class="days__container">
+      <ol class="week__days">
+        <li>Dom</li>
+        <li>Seg</li>
+        <li>Ter</li>
+        <li>Quar</li>
+        <li>Quin</li>
+        <li>Sex</li>
+        <li>Sáb</li>
+      </ol>
+      <ul class="days"></ul>
+    </div>
+  </section>
   
   <script src="../src/index.js"></script>
 </body>
