--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Cronos</title>
 </head>
 <body>
+  <section class="todo__menu">
+    <header class="menu__header">
+      X
+    </header>
+    <article class="menu__selected__day">
+      <div class="menu__date">
+        <h1>Tarefas diárias</h1>
+        <span>Tarefas:</span>
+      </div>
+
+      <form class="listing__todo"></form>
+    </article>
+    <section class="create__todo">
+      <textarea id="todo" cols="30" rows="10"></textarea>
+      <button type="button">Criar</button>
+    </section>
+  </section>
 
   <section class="calendar">
-    <header>Teste</header>
+    <div class="month__name"></div>
     <div class="days__container">
       <ol class="week__days">
         <li>Dom</li>
