--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
 
       <form class="listing__todo"></form>
     </article>
+    
     <section class="create__todo">
-      <textarea id="todo" cols="30" rows="10"></textarea>
-      <button type="button">Criar</button>
+      <textarea id="create-todo-input" cols="30" rows="10" autofocus></textarea>
+      <button id="create-todo-button" type="button">Criar</button>
     </section>
   </section>
 
