--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <title>Cronos</title>
-</head>
-<body>
-  <section class="todo__menu">
-    <header class="menu__header">
-      X
-    </header>
-    <div class="menu__selected__day">
-      <article class="selected__day">
-        <strong id="full__date"></strong>
-      </article>
-      <h2>Tarefas diárias:</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Cronos</title>
+  </head>
+  <body>
+    <section class="todo__menu">
+      <header class="menu__header">
+        <button id="close-menu" type="button">Exit</button>
+      </header>
+      <div class="menu__selected__day">
+        <article class="selected__day">
+          <strong id="full__date"></strong>
+        </article>
+        <h2>Tarefas diárias:</h2>
 
-      <form class="listing__todo"></form>
-    </div>
-    
-    <section class="create__todo">
-      <textarea
-        id="create-todo-input"
-        cols="30"
-        rows="10"
-        placeholder="Digite uma tarefa aqui"
-        autofocus></textarea>
-      <button id="create-todo-button" type="button">Criar</button>
+        <form class="listing__todo"></form>
+      </div>
+
+      <section class="create__todo">
+        <textarea
+          id="create-todo-input"
+          cols="30"
+          rows="10"
+          placeholder="Digite uma tarefa aqui"
+          autofocus
+        ></textarea>
+        <button id="create-todo-button" type="button">Criar</button>
+      </section>
     </section>
-  </section>
 
-  <main>
     <article class="calendar">
+      <div class="select__date">
+        <select name="month" id="month">
+          <option value="0">Janeiro</option>
+          <option value="1">Fevereiro</option>
+          <option value="2">Março</option>
+          <option value="3">Abril</option>
+          <option value="4">Maio</option>
+          <option value="5">Junho</option>
+          <option value="6">Julho</option>
+          <option value="7">Agosto</option>
+          <option value="8">Setembro</option>
+          <option value="9">Outubro</option>
+          <option value="10">Novembro</option>
+          <option value="11">Dezembro</option>
+        </select>
+        <select name="year" id="year">
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+          <option value="2024">2024</option>
+        </select>
+      </div>
       <div class="month__name"></div>
       <div class="days__container">
         <ol class="week__days">
@@ -47,17 +73,12 @@
         <ul class="days"></ul>
       </div>
     </article>
-  </main>
 
-  <section class="mobile__menu">
-    <button id="mobile-menu" type="button">
-      Menu
-    </button>
-    <article class="selected__day">
+    <section class="mobile__menu">
+      <button id="mobile-menu" type="button">Menu</button>
+      <article class="selected__day">
         <strong id="mobile__full__date"></strong>
-    </article>
-  </section>
-  
-  <script src="../src/index.js"></script>
-</body>
+      </article>
+    </section>
+  </body>
 </html>
