Mobile menu completo

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     </article>
 
     <section class="mobile__menu">
-      <button id="mobile-menu" type="button">Menu</button>
+      <button id="mobile-menu" type="button">Abrir</button>
       <article class="selected__day">
         <strong id="mobile__full__date"></strong>
       </article>
