Criação de enventos completo

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <section class="create__todo">
         <div class="create__event">
           <input type="checkbox" id="event" />
-          <label for="event">Criar evento?</label>
+          <label for="event">Eventos</label>
 
           <div class="event__config">
             <input type="text" id="title" placeholder="Titulo do evento" />
@@ -44,7 +44,7 @@
           placeholder="Digite uma tarefa aqui"
           autofocus
         ></textarea>
-        <button id="create" type="button">Criar</button>
+        <button id="create" type="submit">Criar</button>
       </section>
     </section>
 
