--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,17 @@
 
           <div class="event__config">
             <input type="text" id="title" placeholder="Titulo do evento" />
-            <select name="first-alert" id="first-alert">
+            <!-- <select name="first-alert" id="first-alert">
               <option label="Selecione quando quer ser avisado" hidden></option>
               <option value="1">Um dia antes</option>
               <option value="2">Dois dias antes</option>
               <option value="3">Três dias antes</option>
               <option value="4">Quatro dias antes</option>
               <option value="5">Cinco dias antes</option>
-            </select>
+            </select> -->
           </div>
         </div>
+
         <textarea
           id="body"
           cols="30"
@@ -44,12 +45,14 @@
           placeholder="Digite uma tarefa aqui"
           autofocus
         ></textarea>
+
         <button id="create" type="submit">Criar</button>
       </section>
     </section>
 
     <article class="calendar">
       <div class="select__date">
+
         <select name="month" id="month">
           <option value="0">Janeiro</option>
           <option value="1">Fevereiro</option>
@@ -65,6 +68,7 @@
           <option value="11">Dezembro</option>
         </select>
         <select name="year" id="year"></select>
+        
       </div>
       <div class="month__name"></div>
       <div class="days__container">
