--- a/public/index.html
+++ b/public/index.html
@@ -58,22 +58,12 @@
       </ul>
 
       <div class="select__date">
-        <select name="month" id="month">
-          <option value="0">Janeiro</option>
-          <option value="1">Fevereiro</option>
-          <option value="2">Março</option>
-          <option value="3">Abril</option>
-          <option value="4">Maio</option>
-          <option value="5">Junho</option>
-          <option value="6">Julho</option>
-          <option value="7">Agosto</option>
-          <option value="8">Setembro</option>
-          <option value="9">Outubro</option>
-          <option value="10">Novembro</option>
-          <option value="11">Dezembro</option>
-        </select>
-        <select name="year" id="year"></select>
-        
+        <input type="month" name="date" id="date">
+
+        <div class="select__date__step">
+          <button id="back-step">&lt;</button>
+          <button id="next-step">&gt;</button>
+        </div>
       </div>
       
       <h2 class="month__name"></h2>
